# prompta

./: .gitignore  Cargo.toml  Justfile  README.md  projectory.toml  testfile
src/: config.rs  lib.rs  main.rs  templates.rs
src/cli/: mod.rs
src/cli/commands/: add_to_var.rs  clone.rs  create.rs  edit.rs  edit_meta.rs  list.rs  mod.rs  output.rs
src/macros/: comment.rs  include.rs  mod.rs  shell.rs
